# graphicsengine

./: ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_GUIDE.md  CMakeLists.txt  COMMENTARY_SUMMARY.md  Camera.cpp  Camera.h  DOCUMENTATION_COMPLETE.md  LIGHTING_QUICK_START.md  Mesh.cpp  Mesh.h  QUICK_REFERENCE.md  Renderer.cpp  Renderer.h  SceneGraphExample.txt  Scenemap.cpp  Scenemap.h  Shader.cpp  Shader.h  ShapeFactory.cpp  Texture.cpp  Texture.h  imgui.ini  main.cpp  readme.md
Engine/Core/: Application.cpp  Application.h
Engine/Renderer/: Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  vertex.cpp
Engine/Scene/: Camera.cpp  GameObject.cpp  GameObject.h  Light.h  Scenemap.cpp  Scenemap.h
Engine/UI/: Panel.cpp  Panel.h
Engine/Utility/: EngineTime.cpp  EngineTime.h  Helper.cpp  Helper.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h  ShapeFactory.cpp  ShapeFactory.h  stb_image.cpp  stb_image.h
Shaders/: shader.frag  shader.vert
